--- a/gallery.html
+++ b/gallery.html
@@ -120,7 +120,7 @@
 			<div class="container">
 				<label for="be4"><img src="image/bed4.jpeg" alt="Bed"></label>
 				<input type="checkbox" id="be4">
-				<p> $87.92 -Chair</p>
+				<p> $87.92 -Bed</p>
 			</div>
 
 			<div class="container">
@@ -194,7 +194,7 @@
 		
 		<div class="pop" id="pop">
 			
-			Opps! Sorry We are upadating on this feature check back in the next 2 weeks or 
+			Opps! Sorry We are updating on this feature check back in the next 2 weeks or 
 			contact our customer care for your payment or 
 			copy the following bank details to make your payment
 			<p>	
