--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<img src="image/chair1.jpeg" alt="chair">
 			<div class="gallery"> <a href="gallery.html"><i class="fa-solid fa-cart-arrow-down fa-fade">
 			</i> View in Gallery <i class="fa-solid fa-truck-fast fa-fade"></i></a></div> 
-				<p>Chair</p>
+				<p>Sofa</p>
 				
 			</div>
 
@@ -124,7 +124,7 @@
 				<img src="image/chair2.jpeg" alt="chair">
 			<div class="gallery"> <a href="gallery.html"><i class="fa-solid fa-cart-arrow-down fa-fade">
 			</i> View in Gallery <i class="fa-solid fa-truck-fast fa-fade"></i></a></div> 
-				<p> Chair</p>
+				<p> Sofa</p>
 			</div>
 
 
